# smartfactory_pkg

./: .dockerignore  .gitignore  README.md  biblioteca.txt
.devcontainer/: Dockerfile  devcontainer.json
UPPAAL files/: smartfactory_des.xml  supervisor.xml  supervisor3.xml  (+2 more)
smartfactoring_ws/src/smart_factory_arm_description/: CMakeLists.txt  README.md  package.xml
smartfactoring_ws/src/smart_factory_arm_description/install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/ament_index/resource_index/package_run_dependencies/: smart_factory_arm_description
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/ament_index/resource_index/parent_prefix_path/: smart_factory_arm_description
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/smart_factory_arm_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/smart_factory_arm_description/cmake/: smart_factory_arm_descriptionConfig-version.cmake  smart_factory_arm_descriptionConfig.cmake
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/smart_factory_arm_description/environment/: ament_prefix_path.dsv  path.dsv
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/smart_factory_arm_description/launch/: gripper_launch.launch.py
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/smart_factory_arm_description/meshes/: Extensor_UR10.stl  Garra_Completa_Extensor.stl  Garra_Completa_Extensor_Corrected.stl  Garra_Completa_Extensor_No_Suction_Cup.stl  Garra_Schunk_Complete.stl  Garra_Schunk_No_Suction_Cup.stl  Gripper_Base.stl  Suction_Base.stl  Suction_Cup_Bottom.stl  Suction_Cup_Top.stl
smartfactoring_ws/src/smart_factory_arm_description/install/smart_factory_arm_description/share/smart_factory_arm_description/urdf/: custom_gripper.urdf.xacro  smart_factory_arm.urdf.xacro  vacuum_gazebo.urdf.xacro
smartfactoring_ws/src/smart_factory_arm_description/launch/: gripper_launch.launch.py
smartfactoring_ws/src/smart_factory_arm_description/log/: latest_build
smartfactoring_ws/src/smart_factory_arm_description/meshes/: Extensor_UR10.stl  Garra_Completa_Extensor.stl  Garra_Completa_Extensor_Corrected.stl  Garra_Schunk_No_Suction_Cup.stl  Gripper_Base.stl  Suction_Base.stl  Suction_Cup_Bottom.stl  Suction_Cup_Top.stl
smartfactoring_ws/src/smart_factory_arm_description/rviz/: smart_factory_scene.rviz  smartfactory.rviz
smartfactoring_ws/src/smart_factory_arm_description/urdf/: custom_gripper.urdf.xacro  smart_factory_arm.urdf  smart_factory_arm.urdf.xacro  vacuum_gazebo.urdf.xacro
smartfactoring_ws/src/smart_factory_moveit/: .setup_assistant  CMakeLists.txt  README.md  package.xml
smartfactoring_ws/src/smart_factory_moveit/config/: moveit.rviz  moveit_controllers.yaml  scene_objects.yaml  ur_servo.yaml
smartfactoring_ws/src/smart_factory_moveit/launch/: mtc_ur10_test.launch.py  ur10_moveit.launch.py
smartfactoring_ws/src/smart_factory_moveit/src/: lab_objects_instance.cpp  move_box_test.cpp  mtc_ur10_test.cpp
smartfactoring_ws/src/smart_factory_moveit/srdf/: smartfactory_arm.ros2_control.xacro  smartfactory_arm.srdf  smartfactory_arm.urdf.xacro
smartfactory_ws/src/External_Packages/kinect_ros2/: CMakeLists.txt
smartfactory_ws/src/External_Packages/kinect_ros2/cfg/: calibration_rgb_A2.yaml
smartfactory_ws/src/External_Packages/kinect_ros2/include/kinect_ros2/: kinect_ros2_component.hpp
smartfactory_ws/src/External_Packages/kinect_ros2/launch/: showimage.launch.py
smartfactory_ws/src/External_Packages/kinect_ros2/src/: kinect_ros2_component.cpp  kinect_ros2_node.cpp
smartfactory_ws/src/turtlebot2i/turtlebot2i_interfaces/: CMakeLists.txt  package.xml
smartfactory_ws/src/turtlebot2i/turtlebot2i_interfaces/msg/: BoundingBox.msg  EvalError.msg  SafetyRisk.msg  SafetyZone.msg  VelocityScale.msg
smartfactory_ws/src/turtlebot2i/turtlebot2i_interfaces/srv/: ListMaps.srv
smartfactory_ws/src/turtlebot2i/turtlebot2i_mapping/: CMakeLists.txt  package.xml
smartfactory_ws/src/turtlebot2i/turtlebot2i_mapping/config/: rgbd_gui.ini  rtabmap_lidar_params.yaml  rtabmap_odom_params.yaml  rtabmap_slam_params.yaml  rtabmap_sync_params.yaml  rtabmap_util_params.yaml  rtabmap_viz_params.yaml
smartfactory_ws/src/turtlebot2i/turtlebot2i_mapping/launch/: mapping_all.launch.py  mapping_all_savemap.launch.py  mapping_aruco.launch.py  mapping_camera_sync.launch.py  mapping_lidar.launch.py  mapping_lidar_aruco.launch.py  viz_mapping.launch.py
smartfactory_ws/src/turtlebot2i/turtlebot2i_mapping/src/: list_maps_client.py  list_maps_server.py  load_database_client.py
smartfactory_ws/src/turtlebot2i/turtlebot2i_misc/turtlebot2i_slam_evaluation/: package.xml  setup.cfg  setup.py
smartfactory_ws/src/turtlebot2i/turtlebot2i_misc/turtlebot2i_slam_evaluation/launch/: rgbd_odometry_evaluation.launch.py  tum_freiburg2_pioneer_slam_rgbdslam_datasets.launch.py
smartfactory_ws/src/turtlebot2i/turtlebot2i_misc/turtlebot2i_slam_evaluation/turtlebot2i_slam_evaluation/: odometry_error_node.py  plot_bag_data.py
smartfactory_ws/src/turtlebot2i/turtlebot2i_safety/: CMakeLists.txt  package.xml  setup.cfg  setup.py
smartfactory_ws/src/turtlebot2i/turtlebot2i_safety/launch/: demo_safety_lidar.launch.py  safety_zone.launch.py
smartfactory_ws/src/turtlebot2i/turtlebot2i_safety/param/: vel_mux.yaml
smartfactory_ws/src/turtlebot2i/turtlebot2i_safety/rules/: ra_demo.data
smartfactory_ws/src/turtlebot2i/turtlebot2i_safety/turtlebot2i_safety/: .mitigation_rules.py.swp  action_complete_safety.py  assessment_rules_demo.py  mitigation_rules.py  speed_return_node.py  speed_scaling_simple.py  zone_definition_node.py
(+298 files in other folders)
