<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>turtlebot2i_slam_evaluation</name>
  <version>1.0.0</version>
  <description>Slam evaluation package for RobotXR</description>
  <maintainer email="felipe.nascimento@virtus.ufcg.edu.br">robotxr-humble</maintainer>
  <license>TODO: License declaration</license>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <exec_depend>rclpy</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>ros2launch</exec_depend>
  <exec_depend>launch</exec_depend>
  <exec_depend>launch_ros</exec_depend>


  <exec_depend>turtlebot2i_mapping</exec_depend>
  <exec_depend>turtlebot2i_simulation</exec_depend>
  <exec_depend>turtlebot2i_interfaces</exec_depend>
  <exec_depend>rtabmap_odom</exec_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
